templates/files/k8s-resource/ingress-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "10254"
    prometheus.io/scrape: "true"
  name: nginx-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: nginx-ingress-controller
spec:
  externalTrafficPolicy: Local
  type: NodePort
  ports:
  - name: http
    port: 80
    nodePort: 30010
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    nodePort: 30011
    protocol: TCP
    targetPort: 443
  selector:
    k8s-app: nginx-ingress-controller
