templates/files/k8s-resource/cilium-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-all-egress
spec:
  egress:
  - toEntities:
    - all
  endpointSelector: {}
